[package]
name = "ion"
version = "0.2.0"
edition = "2024"

[lib]

[lints]
workspace = true

[dependencies]
flume.workspace = true
v8.workspace = true
tokio = { workspace = true, features = ["full"] }
normalize-path.workspace = true
async_fn_traits.workspace = true
num_cpus.workspace = true
parking_lot.workspace = true
rand.workspace = true
oxc_allocator = "0.87.0"
oxc_parser = "0.87.0"
oxc_ast = "0.87.0"
oxc_transformer = "0.87.0"
oxc_codegen = "0.87.0"
oxc_semantic = "0.87.0"
