[package]
name = "ion"
version = "0.2.0"
edition = "2024"

[lib]

[lints]
workspace = true

[dependencies]
flume.workspace = true
v8.workspace = true
tokio = { workspace = true, features = ["full"] }
normalize-path.workspace = true
async_fn_traits.workspace = true
num_cpus.workspace = true
parking_lot.workspace = true
rand.workspace = true
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_ast.workspace = true
oxc_transformer.workspace = true
oxc_codegen.workspace = true
oxc_semantic.workspace = true
